style.css
/* ... */
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/









/* COMPUTER SCREEN */
/* min width 1024 ---------------------------------- */
@media screen and (min-width: 1024px) {
  .navbar,
  .navbar__ul,
  .header__container {
    display: flex;
  }
  .navbar {
    flex-direction: row;
    justify-content: space-between;
  }

  .navbar__ul {
    flex-direction: row;
  }

  .navbar__ul li {
    padding: 40px 15px 15px 0px;
  }

  .navbar__ul .link {
    margin: 0;
  }

  .header__container {
    padding-top: 10rem;
    padding-bottom: 18rem;
    flex-direction: row-reverse;
    margin-bottom: 15px;
    align-items: center;
    justify-content: center;
  }

  .header__container img {
    max-width: 330px;
  }

  .header__text {
    padding-left: 5rem; /* separation between image and about me text*/
  }

  /* Portfolio section------------------------- */
  .portfolio__container {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1165px;
  }

  .card {
    max-width: 100%;
  }

  .card img {
    margin-bottom: 1rem;
  }

  .card p {
    font-weight: 200;
  }
}
  /* End Portfolo------------------------------ */


















* button {
  color: black;
}



/* Dark mode------------------------------- */
button[class="darkmode"] {
  cursor: pointer;
  background-color: white;
  border: transparent;
}

.darkmode .portfolio {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode footer {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode .header__container img {
  box-shadow: rgba(255, 255, 255, 1) 0px 2px 15px 0px,
  rgba(255, 255, 255, 0.4) 0px 2px 5px 0px;
}

.darkmode .card {
  box-shadow: rgba(200, 200, 200, 0.4) 0px 2px 5px 0px,
    rgba(200, 200, 200, 0.5) 0px 2px 15px 0px;
}

.darkmode .skills__item img {
  background-color: white;
  border: 15px solid white;
  border-radius: 25%;
}

.darkmode .footer__item img {
  background-color: white;
  border: 2px solid white;
  border-radius: 50%;
}

/*
.darkmode .card img {
  background-color: white;
  border: 1rem solid white;
  border-radius: 5%;
}
*/

.darkmode .card p {
  color: white;
}

.darkmode .card h2 {
  color: white;
}

.darkmode .wrapper {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode .navbar__ul li {
  color: var(--clr-dark-text);
  background-color: transparent;
}

.darkmode a[href] {
  color: var(--clr-dark-text);
}

.darkmode button {
  color: white;
}















/* ------------------- PROJECTS GALLERY SCROLLING --------------------------*/

.gallery-container {
  position: relative;
  margin-top: 1rem;
}

.gallery-container img {
  object-fit: fill; /* fill, cover, contain, none, scale-down */
  min-height: 200px;
  max-height: 200px;
  border-radius: 1%;
}

@media screen and (min-width: 768px) {
  .gallery-container img {
    min-height: 500px;
    max-height: 500px;
  }
}

@media screen and (min-width: 1024px) {
  .gallery-container img {
    min-height: 643.5px;
    max-height: 643.5px;
  }
}

.cursor {
  cursor: pointer;
}

/* Next & previous buttons */
.gallery-container .prev,
.next {
  left: 0;
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 1rem;
  margin-top: 0rem;
  background-color: rgba(230, 230, 230, 0.5);
  color: black;
  font-weight: bold;
  font-size: 30px;
  border-radius: 0px 20px 20px 0px;
  user-select: none;
  -webkit-user-select: none;
}

/* Position the "next button" to the right */
.next {
  left: auto;
  right: 0;
  border-radius: 20px 0px 0px 20px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(100, 100, 100, 0.7);
}

.prev1,
.next1 {
  left: 0;
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 1rem;
  margin-top: 0rem;
  background-color: rgba(255, 255, 255, 0.2);
  color: black;
  font-weight: bold;
  font-size: 30px;
  border-radius: 0px 20px 20px 0px;
  user-select: none;
  -webkit-user-select: none;
}

.next1 {
  left: auto;
  right: 0;
  border-radius: 20px 0px 0px 20px;
}

.prev1:hover,
.next1:hover {
  background-color: rgba(255, 255, 255, 0.8);
}

/* Number text (1/3 etc) */
.numbertext {
  color: black;
  background-color: rgb(230, 230, 230, 0.95);
  border-radius: 5%;
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 20px;
  position: absolute;
  bottom: 0;
  left: 0;
  margin-bottom: 1.5rem;
  margin-left: 0.5rem;
}

@media screen and (max-width: 1024px) {
  .numbertext{
    font-size: 15px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

@media screen and (max-width: 768px) {
  .numbertext{
    font-size: 10px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
  .w3-badge {display:none}
}

@media screen and (max-width: 768px) {
  .prev, .next, .prev1, .next1, .numbertext {
    display: none;
  }
}

.row:after {
  content: "";
  display: table;
  clear: both;
}


/* navigation bubbles at bottom of images gallery*/
.w3-badge {height:15px;width:15px;padding:0}



/* Show more */
#more, #more1 {display: none;} /* id="more1" */
/* ... */

